image paths fixed

--- a/_posts/restart/2023-04-15-restart.md
+++ b/_posts/restart/2023-04-15-restart.md
@@ -7,10 +7,8 @@ description: Starting a personal blog in 2023
 image: /restart/desk.png
 ---
 
-<figure>
-<img src="{{ page.image }}" alt="Top view of a desk" height="400" width="400">
-<figcaption/>
-</figure>
+![Top view of a desk](desk.png#center){: width="600" }
+
 
 The last time I maintained a blog was over 10 years ago using a WordPress installation on a VPS and no source control. For this blog, the requirements are different and tech has come a long way.
 
